# KaitmazianMO-System-programming-by-Huawei-and-ISP

Akinator/res/: .tree
Akinator/src/: Akinator.h  Tree.cpp  Tree.h  error.h  main.cpp
CacheFriendlyList/: .gitignore  0  CMakeLists.txt  lsit.html  main.cpp  test.cpp
CacheFriendlyList/ListLib/: CMakeLists.txt  list.cpp  list.h
CacheFriendlyList/Log/: CMakeLists.txt  graphviz.cpp  graphviz.h  log.cpp  log.h
CacheFriendlyList/Tests/: CMakeLists.txt
Onegin/: .gitignore  CMakeLists.txt  Makefile  Onegin  buffer.cpp  main.cpp  onegin_text.cpp  text.cpp  vector.h
ProtectedStack/: .gitignore  .trace  CMakeLists.txt  Canary.cpp  Canary.h  Makefile  Memory.cpp  Memory.h  ProtectedBuffer.cpp  ProtectedBuffer.h  ProtectedStack  ProtectedStack.trace  Stack.cpp  Stack.h  a.out  gcc_trace.cpp  gcc_trace.h  hash.cpp  hash.h  log.cpp  main.cpp
Utilities/: c_dangeon.h
Utilities/Log/: gcc_trace.cpp  gcc_trace.h  log.cpp  log.h
Utilities/Strings/: StringView.cpp  StringView.h
WM/: CMakeLists.txt  a.out  test.cpp
WM/Constants/: consts.h
WM/Error/: err.cpp
WM/Instruction/: instr.cpp  instr.h
WM/IntructionSetDSL/: instr_def.h
WM/Log/: log.cpp  log.h
WM/Object/: obj.cpp  obj.h
WM/WASM/: asm.cpp  asm.h  code.cpp  code.h  lex.cpp  lex.h  tok.h
WM/cmake/: dir_to_lib.cmake
WM/src/Error/: CMakeLists.txt  err.cpp  err.h
WM/src/Instruction/: instr.cpp  instr.h
WM/src/IntructionSetDSL/: instr_def.h
WM/src/Lexer/: CMakeLists.txt  lex.cpp  tok.cpp  tok.h
WM/src/Log/: CMakeLists.txt  log.cpp  log.h
WM/src/Meta/: meta.h
WM/src/Object/: CMakeLists.txt  obj.cpp  obj.h  val.cpp  val.h
WM/src/ObjectPool/: CMakeLists.txt  obj_pool.cpp  obj_pool.h
WM/src/Strings/: CMakeLists.txt  str_view.h
WM/src/WASM/: CMakeLists.txt  asm.cpp  asm.h  code.cpp  code.h
WM/unit-tests/: CMakeLists.txt  test_lex.cpp  test_obj_pool.cpp
